--- a/index.html
+++ b/index.html
@@ -11,20 +11,28 @@
     <br>
     <p>Welcome to the main page of assignment-1. Please enter your correct credentials. </p>
     <br>
+    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime excepturi debitis aspernatur iusto quaerat molestias doloremque. Sint quidem, dolores assumenda eius explicabo natus quia exercitationem laborum ut nobis illo consectetur.</article>
+    <br>
+    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil praesentium amet et enim nobis sequi. Fuga veniam illum laborum similique dolores et porro necessitatibus? Similique obcaecati blanditiis eaque, exercitationem dolor rerum ducimus a velit sint quod quas unde enim aut porro nihil labore modi beatae expedita libero quam dolorum voluptate ab? Ea asperiores, beatae nulla excepturi doloremque amet eos, labore, dolor aliquid vero aperiam qui minima eveniet quidem necessitatibus ab pariatur! Nemo iste, aspernatur sed labore quod autem illum quia voluptatum debitis doloribus animi quam sequi repellat repudiandae aliquid eos placeat accusamus reiciendis, perspiciatis voluptatem incidunt iure magnam facilis sunt.</article>
+    <br>
     <form>
-        <label>First-Name</label>
+        <label>First-Name: </label>
         <input type="text" placeholder="enter your first-name">
         <br>
-        <label>Last-Name</label>
+        <label>Last-Name: </label>
         <input type="text" placeholder="enter your last-name">
         <br>
-        <label>Age</label>
+        <label>Age: </label>
         <input type="number" placeholder="enter your age">
         <br>
-        <label>Gender</label>
-        <input type="radio" value="Male">
-        <input type="radio" value="Female">
-        <input type="radio" value="Others">
+        <label>Gender: </label>
+        Male
+        <input type="radio" name="a">
+        Female
+        <input type="radio" name="a">
+        Others
+        <input type="radio" name="a">
+        <br>
         <br>
         <input type="submit" value="Submit">
     </form>
